# ars

./: CMakeLists.txt  README.md
app/: gpu_fullArsIsoMpeg7.cu  gpu_testAnisotropicArs.cu  gpu_testArsIsoMpeg7.cu  gpu_testIsotropicArs.cu  gpu_testIsotropicArs_old.cu  testAnisotropicArs.cpp  testAnisotropicKernel.cpp  testBBTranslation.cpp  testConsensusTranslationEstimator.cpp  testCorrelationArs.cpp  testFunctions.cpp  testGaussianMixtureEstimator.cpp  testIsotropicArs.cpp  testProcrustes.cpp  testProcrustesUmeyama.cpp  testProcrustesUmeyama2d.cpp  testProcrustesUmeyama3d.cpp  testTranslationRefiner.cpp
cmake_modules/: arsConfig.cmake
include/ars/: AngularRadonSpectrum.h  AnisotropicKernel.h  ArsKernel.h  ArsKernelAnisotropic2d.h  ArsKernelIsotropic2d.h  BBOptimizer1d.h  BBTranslation.h  ConsensusTranslationEstimator.h  DisjointSet.h  GaussianMixtureEstimator.h  HistogramCircularCorrelation.h  HoughSpectrum.h  IsotropicKernel.h  MortonOctree.h  MortonOrderedPoints.h  MortonSort.h  MortonTree.h  NonIsotropicKernel.h  ParamMap.h  ProcrustesUmeyama.h  Profiler.h  TranslationRefiner.h  VectorTree.h  ars2d.cuh  ars2d.h  ars2d_old.h  ars3d.h  cuArsIso.cuh  definitions.h  functions.h  mpeg7RW.h  mpeg7_io.h  niars2d.cuh  utils.h
src/: AngularRadonSpectrum.cpp  AnisotropicKernel.cpp  ArsKernel.cpp  ArsKernelAnisotropic2d.cpp  ArsKernelIsotropic2d.cpp  BBOptimizer1d.cpp  BBTranslation.cpp  ConsensusTranslationEstimator.cpp  DisjointSet.cpp  GaussianMixtureEstimator.cpp  HistogramCircularCorrelation.cpp  HoughSpectrum.cpp  IsotropicKernel.cpp  MortonOrderedPoints.cpp  MortonSort.cpp  NonIsotropicKernel.cpp  ParamMap.cpp  ProcrustesUmeyama.cpp  Profiler.cpp  TranslationRefiner.cpp  ars2d.cpp  ars2d.cu  ars3d.cpp  definitions.cpp  functions.cpp  mpeg7RW.cpp  mpeg7_io.cpp  testAnisotropicArs.cpp  testAnisotropicKernel.cpp  testCorrelationArs.cpp  testFunctions.cpp  testGaussianMixtureEstimator.cpp  testIsotropicARS.cpp  testIsotropicArs.cpp  testMortonOrderedPoints.cpp  testNonIsotropicKernel.cpp  utils.cpp
test/: testFunctions.cpp  testIsotropicARS.cpp  testLegendre.cpp
